# fin-infra

./: .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  cliff.toml  codecov.yml  docker-compose.test.yml  docs-changelog.json  mkdocs.yml  pyproject.toml  test_cards_app.py  test_direct.py  test_model_speed.py
.github/: copilot-instructions.md  plans.md  settings.yml  template-plans.md
benchmarks/: bench_cashflows.py  bench_categorization.py  conftest.py
docs/: acceptance-matrix.md  acceptance.md  analytics.md  api.md  architecture.md  brokerage.md  budgets.md  caching-rate-limits-retries.md  categorization.md  compliance.md  core-vs-scaffold.md  credit.md  crypto-data.md  crypto.md  documents.md  error-handling.md  goals.md  insights.md  investments.md  (+16 more)
examples/: Makefile  QUICKSTART.md  README.md  USAGE.md  create_tables.py  goals_demo.py  pyproject.toml  run.sh  web-api-phase1-demo.py
examples/docs/: CAPABILITIES.md  CLI.md  PROVIDERS.md
examples/migrations/: env.py
examples/migrations/versions/: 4d9b789c3dd8_initial_financial_models.py
examples/scripts/: measure_llm_costs.py  quick_setup.py  scaffold_models.py  test_providers.py  wait_for.py
examples/src/fin_infra_template/: __init__.py  helpers.py  main.py  settings.py
examples/src/fin_infra_template/api/v1/: routes.py
examples/src/fin_infra_template/db/: base.py  models.py  schemas.py
examples/src/fin_infra_template/documents/: __init__.py  demo.py
examples/tests/: test_main.py  test_models.py  test_schemas.py
(+222 files in other folders)
